tests/errors/invalid-harmony-duration.typ
#import "../../src/lib.typ": score

#score(
  time: "4/4",
  bars: (
    (notes: "c5:q d e f", harmony: "Cmaj7:h A7:q"),
  ),
)
